--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 </html>
 <script>
-window.location.replace('/rotergerdesigns/Registro/home.php');
+window.location.replace('https://rotergerdesigns.github.io/RotergerDesigns/Registro/home.php');
 
 </script>
