--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+  <link rel="htaccess" href=".htacces">
 </html>
 <script>
 window.location.replace('https://rotergerdesigns.github.io/RotergerDesigns/Registro/home.php');
